# librespot-cpp

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  readme.md
rs/: CMakeLists.txt  Cargo.toml
src/: lib.rs  main.cpp
