cmake_minimum_required(VERSION 3.15)

project(librespot-cxx)

set(CMAKE_CXX_STANDARD 17)
if (POLICY CMP0048)
	cmake_policy(SET CMP0048 NEW)
endif ()

option(ENABLE_LTO "Enable cross language linking time optimization" ON)
if (ENABLE_LTO)
	include(CheckIPOSupported)
	check_ipo_supported(RESULT supported OUTPUT error)
	if (supported)
		message(STATUS "IPO / LTO enabled")
		set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
		add_link_options(-fuse-ld=lld)
	else ()
		message(STATUS "IPO / LTO not supported: <${error}>")
	endif ()
else ()
	message(STATUS "IPO / LTO disabled")
endif ()

include_directories(${CMAKE_BINARY_DIR}/rs)
include_directories(src)

add_subdirectory(rs)
add_executable(librespot-cxx src/main.cpp)
target_link_libraries(librespot-cxx librespot-cxx-rs)
